<resources>
    <string name="app_name">SEBC Application</string>
    <string name="TxtTitulo">Simulador de Tarifas</string>
    <string name="editUsuario">Usuário:</string>
    <string name="editSenha">Senha:</string>
    <string name="btnAcessar">Acessar</string>
    <string name="title_activity_painel_admin">PainelAdminActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="btnNovoCliente">Novo Cliente</string>
    <string name="editLogin">Login</string>
    <string name="editNome">Nome</string>
    <string name="editSenhaNC">Senha</string>
    <string name="editCadastrar">Cadastrar</string>
    <string name="editN_do_medidor">N° do Medidor</string>
    <string name="editNovo_cliente">Novo Cliente</string>
    <string name="spinnerTipoRede">Tipo da Rede</string>

    <string-array name="tipo_rede">
        <item>Monofásico</item>
        <item>Bifásico</item>
        <item>Trifásico (Delta)</item>
        <item>Trifásico (Estrela)</item>
    </string-array>
</resources>
